# spritebot

./: .gitignore  Dockerfile  README.md  pyproject.toml  zigzag.py
.github/workflows/: docker-image-branch.yml  docker-image.yml
charts/: Chart.yaml  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
src/: .env-example  bot.py  main.py  pyproject.toml
src/cogs/: chansey.py  contest.py  eraser.py  galactic.py  klefki.py  smeargle.py  unown.py  utils.py  zigzag.py
src/commands/: utils.py  zigzag.py
src/data/: MultiWordNames.json  NamesToNumbers.json
src/smeargle-data/: generate_smeargle_images.py  pokemon.txt
